--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "notice",
+  "version": "0.0.0",
   "private": true,
-  "description": "a jQuery notification plugin",
-  "version": "0.3.1",
-  "url": "https://github.com/jgallen23/notice",
-  "company": "JGA",
-  "license": "MIT",
   "devDependencies": {
-    "grunt": "*",
-    "grunt-contrib-stylus": "*"
+    //"mocha": "~1.9.0",
+    "grunt": "~0.4.1",
+    "grunt-reloadr": "~0.1.2",
+    //"grunt-mocha": "~0.3.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-plato": "~0.2.0"
   }
 }
