--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "copyright": "Greg Allen",
   "main": "dist/notice.js",
   "dependencies": {
+    "jquery": "*"
   },
   "devDependencies": {
     "assert": "*"
