--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
-    //"mocha": "~1.9.0",
     "grunt": "~0.4.1",
-    "grunt-reloadr": "~0.1.2",
-    //"grunt-mocha": "~0.3.0",
+    "grunt-mocha": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-plato": "~0.2.0"
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-plato": "~0.2.0",
+    "grunt-bytesize": "~0.1.0",
+    "grunt-concat-bower": "~0.1.0",
+    "grunt-shell": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-stylus": "~0.7.0"
   }
 }
