--- a/bower.json
+++ b/bower.json
@@ -4,12 +4,20 @@
   "version": "0.3.2",
   "homepage": "https://github.com/jgallen23/notice",
   "license": "MIT",
-  "copyright": "Greg Allen",
+  "copyright": "First + Third",
   "main": "dist/notice.js",
   "dependencies": {
-    "jquery": "*"
   },
   "devDependencies": {
-    "assert": "*"
-  }
+    "assert": "*",
+    "blanket": "*"
+  },
+  "ignore": [
+    "test",
+    "example",
+    "lib",
+    "Gruntfile.js",
+    "package.json",
+    "grunt"
+  ]
 }
