--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-mocha": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-plato": "~0.2.0",
     "grunt-bytesize": "~0.1.0",
-    "grunt-concat-bower": "~0.1.0",
-    "grunt-shell": "~0.3.0",
+    "grunt-concat-bower": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-stylus": "~0.7.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-mocha": "~0.4.1",
+    "grunt-notify": "~0.2.13",
+    "grunt-shell": "~0.4.0",
+    "load-grunt-config":"~0.4.0",
+    "load-grunt-tasks": "~0.1.0"
   }
 }
