swapped out stylus for less

--- a/grunt/concat.yaml
+++ b/grunt/concat.yaml
@@ -9,3 +9,7 @@ full:
     - 'dist/_bower.js'
     - 'lib/<%= name %>.js'
   dest: 'dist/<%= name %>.full.js'
+less:
+  src: 'dist/notice.css'
+  dest: 'dist/notice.css'
+
