--- a/grunt/watch.yaml
+++ b/grunt/watch.yaml
@@ -8,6 +8,11 @@ lib:
     - 'script-dist'
     - 'mocha'
     - 'notify:generic'
+less:
+  files:
+    - 'lib/*.less'
+  tasks:
+    - 'less'
 test:
   files:
     - '<%= jshint.test %>'
