--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-notify": "~0.2.13",
     "grunt-shell": "~0.4.0",
     "load-grunt-config":"~0.4.0",
-    "load-grunt-tasks": "~0.1.0"
+    "load-grunt-tasks": "~0.1.0",
+    "grunt-contrib-less": "~0.6.3"
   }
 }
