--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "copyright": "First + Third",
   "main": "dist/notice.js",
   "dependencies": {
+    "jquery": "1.*"
   },
   "devDependencies": {
     "assert": "*",
