--- a/grunt/notify.yaml
+++ b/grunt/notify.yaml
@@ -1,6 +1,9 @@
 generic:
   options:
-    message: '<%= name %> build complete'
+    message: 'Build complete'
 watch:
   options:
-    message: '<%= name %> watch started'
+    message: 'Watch started'
+tests:
+  options:
+    message: 'Tests complete'
