--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-mocha": "~0.4.1",
     "grunt-notify": "~0.2.13",
     "grunt-shell": "~0.4.0",
-    "load-grunt-config":"~0.4.0",
-    "load-grunt-tasks": "~0.1.0",
-    "grunt-contrib-less": "~0.6.3"
+    "load-grunt-config":"~0.6.0"
   }
 }
