--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-mocha": "~0.4.1",
     "grunt-notify": "~0.2.13",
     "grunt-shell": "~0.4.0",
-    "load-grunt-config":"~0.6.0"
+    "load-grunt-config": "~0.6.0",
+    "grunt-release": "~0.6.0"
   }
 }
