--- a/grunt/watch.yaml
+++ b/grunt/watch.yaml
@@ -4,7 +4,12 @@ lib:
   files:
     - '<%= jshint.lib %>'
   tasks:
-    - 'scripts'
+    - 'lib'
+styles:
+  files:
+    - 'lib/**/*.less'
+  tasks:
+    - 'styles'
 test:
   files:
     - '<%= jshint.test %>'
@@ -16,7 +21,7 @@ test:
 example:
   files:
     - 'example/*'
-build:
+tools:
   files:
     - 'bower.json'
     - 'Gruntfile.js'
