--- a/grunt/concat.yaml
+++ b/grunt/concat.yaml
@@ -1,11 +1,11 @@
 options:
   banner: '<%= meta.banner %>'
-dist:
+lib:
   src:
     - 'lib/<%= name %>.js'
-  dest: 'dist/<%= name %>.js'
+  dest: 'dist/<%= name %>.bower.js'
 full:
   src:
     - 'dist/_bower.js'
     - 'lib/<%= name %>.js'
-  dest: 'dist/<%= name %>.full.js'
+  dest: 'dist/<%= name %>.js'
