--- a/grunt/uglify.yaml
+++ b/grunt/uglify.yaml
@@ -1,8 +1,8 @@
 options:
   banner: '<%= meta.banner %>'
-dist:
+lib:
+  src: 'dist/<%= name %>.bower.js'
+  dest: 'dist/<%= name %>.bower.min.js'
+full:
   src: 'dist/<%= name %>.js'
   dest: 'dist/<%= name %>.min.js'
-full:
-  src: 'dist/<%= name %>.full.js'
-  dest: 'dist/<%= name %>.full.min.js'
