--- a/package.json
+++ b/package.json
@@ -1,29 +1,54 @@
 {
   "name": "notice",
-  "version": "0.0.0",
-  "private": true,
-  "devDependencies": {
-    "grunt": "0.4.2",
-    "grunt-bytesize": "~0.1.0",
-    "grunt-concat-bower": "~0.3.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-mocha": "~0.4.1",
-    "grunt-notify": "~0.2.13",
-    "grunt-shell": "~0.6.4",
-    "load-grunt-config":"~0.7.1",
-    "jshint-stylish": "~0.1.5",
-    "grunt-jscs-checker": "~0.4.1",
-    "grunt-contrib-less": "~0.11.0"
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/notice.js",
+  "module": "index.js",
+  "scripts": {
+    "start": "scriptkit",
+    "build": "scriptkit build",
+    "dev": "scriptkit dev",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "scriptkit"
   },
-  "meta": {
-    "ftInit": {
-      "version": "0.0.5",
-      "type": "browser"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/firstandthird/notice.git"
+  },
+  "keywords": [],
+  "author": "First+Third <code@firstandthird.com> (http://firstandthird.com/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/firstandthird/notice/issues"
+  },
+  "homepage": "https://github.com/firstandthird/notice#readme",
+  "devDependencies": {
+    "eslint-config-firstandthird": "3.2.0",
+    "eslint-plugin-import": "2.2.0",
+    "scriptkit": "0.2.0"
+  },
+  "scriptkit": {
+    "test": {
+      "enabled": false
+    },
+    "files": {
+      "dist/notice.js": "index.js"
+    },
+    "scripts": {
+      "babel": {
+        "exclude": [
+          "node_modules/tape-rollup/*"
+        ]
+      }
     }
+  },
+  "eslintConfig": {
+    "extends": "firstandthird",
+    "env": {
+      "browser": true
+    }
+  },
+  "dependencies": {
+    "domassist": "^1.9.0"
   }
 }
